# note-service

./: README.md  docker-compose.yml  dockerfile  dockerfile.noteservice
note_service/app/: config.yml  go.mod  go.sum
note_service/app/cmd/main/: app.go
note_service/app/internal/apperror/: error.go  middleware.go
note_service/app/internal/client/user_client/: client.go  model.go
note_service/app/internal/config/: config.go
note_service/app/internal/note/: handler.go  model.go  service.go  storage.go
note_service/app/internal/note/db/: postgres.go
note_service/app/pkg/handlers/metric/: handler.go
note_service/app/pkg/postgres/: client.go
note_service/app/pkg/rest/: client.go
note_service/app/pkg/shutdown/: shutdown.go
note_service/app/pkg/user/: middleware.go
user_service/: alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  settings.env
user_service/app/: app.py  config.py  db.py
user_service/app/api/: routes.py
user_service/app/models/: models.py
user_service/app/schemas/: responses.py  schemas.py
user_service/app/utils/: users.py
user_service/migrations/: env.py
user_service/migrations/versions/: 92503fab6294_init.py
