[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["YuriSh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
asyncpg = "0.29.0"
bcrypt = "4.1.2"
build = "1.1.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "42.0.5"
distlib = "0.3.8"
dnspython = "2.6.1"
dulwich = "0.21.7"
email-validator = "2.1.1"
fastapi = "0.110.0"
fastapi-users = "13.0.0"
fastapi-users-db-sqlalchemy = "6.0.1"
fastjsonschema = "2.19.1"
filelock = "3.13.2"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.6"
installer = "0.7.0"
jaraco-classes = "3.3.1"
jeepney = "0.8.0"
keyring = "24.3.1"
makefun = "1.15.2"
mako = "1.3.2"
markupsafe = "2.1.5"
more-itertools = "10.2.0"
msgpack = "1.0.8"
packaging = "24.0"
passlib = "1.7.4"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pwdlib = "0.2.0"
pycparser = "2.21"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
pyjwt = "2.8.0"
pyproject-hooks = "1.0.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
rapidfuzz = "3.7.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.36.3"
tomlkit = "0.12.4"
trove-classifiers = "2024.3.25"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
virtualenv = "20.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
